# godot-mdns

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
addons/godot-mdns/: .gitignore  godot-mdns.gdextension  godot-mdns.gdextension.uid  plugin.cfg
addons/godot-mdns/android/: .gitignore  MulticastLockPlugin.gdap
android-plugin/: .gitignore  README.md  build.gradle  settings.gradle
android-plugin/src/main/: AndroidManifest.xml
android-plugin/src/main/java/com/godotmdns/: MulticastLockPlugin.java
src/: lib.rs
tests/: mdns_loopback.rs
