[package]
name = "godot-mdns"
version = "0.6.0"
edition = "2021"
description = "GDExtension (Rust) providing mDNS service discovery and advertisement for Godot 4"
license = "MIT"
repository = "https://github.com/80px/godot-mdns"
keywords = ["godot", "gdextension", "mdns", "networking", "gamedev"]

[lib]
name = "godot_mdns"
# cdylib  → shared library for Linux / macOS / Windows / Android
# staticlib → static library required by iOS (Godot links it at export time)
crate-type = ["cdylib", "staticlib"]

# ── Runtime dependencies ───────────────────────────────────────────────────────
[dependencies]
# Godot 4 GDExtension binding for Rust
godot = "0.2"

# Pure-Rust mDNS — supports both browsing AND advertising (no OS daemon needed)
mdns-sd = "0.13"

# Cross-platform hostname retrieval for service advertisement
hostname = "0.4"

# ── Release profile ─────────────────────────────────────────────────────────
[profile.release]
opt-level = "z"       # Minimise binary size
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
# Faster iterations during development
opt-level = 0
debug = true
